[tool.poetry]
name = "bakasur"
version = "1.0.0"
description = ""
authors = ["Devendra Kulkarni <kulkarnidevendra21@gmail.com>"]

[tool.poetry.scripts]
bakasur = "bakasur.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.2"}
requests = "^2.28.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
