[tool.poetry]
name = "bakasur"
version = "1.3.1"
description = "Bakasur is your friendly demon that helps you analyse your Thuisbezorgd order history and visualise patterns."
authors = ["Devendra Kulkarni <kulkarnidevendra21@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
bakasur = "bakasur.main:app"

[tool.poetry.dependencies]
python = ">=3.7.1, < 3.11.0"
typer = {extras = ["all"], version = "^0.4.2"}
requests = "^2.28.1"
rich = "^12.4.4"
datapane = "^0.14.0"
fake-useragent = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
